# WhisperDesk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/export/: json_export.rs  markdown.rs  mod.rs  srt.rs  txt.rs  vtt.rs
src-tauri/src/models/: downloader.rs  manager.rs  mod.rs
src-tauri/src/storage/: history.rs
src-tauri/src/stt/: whisper.rs
src/components/: Sidebar.tsx
src/components/History/: HistoryList.tsx
src/components/Settings/: AboutPage.tsx  ModelManager.tsx  SettingsPage.tsx
src/components/Transcribe/: DropZone.tsx  TranscriptView.tsx
src/components/common/: AudioPlayer.tsx  Footer.tsx  SpeakDockBanner.tsx
src/lib/: types.ts  utils.ts
src/stores/: appStore.ts
