[package]
name = "whisperdesk"
version = "1.0.0"
description = "Free, open-source audio & video transcription"
authors = ["Liaqat Eagle"]
edition = "2021"
license = "MIT"

[lib]
name = "whisperdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.16"
symphonia = { version = "0.5", features = ["all"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
